crates/filecommand-tui/tests/snapshots/snapshot_views__tree_mode_branches.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: text
---
╔═════════ C:\Users\demo\left ═════════╗╔════════ C:\Users\demo\right ═══3:04 PM
║Tree                                  ║║Name↓        │ Size    Date    Time   ║
║C:\                                   ║║..           │ ▶UP--DI                ║
║├─ALPHA                               ║║docs         │ ▶SUB-DI 01-02-2 03:0   ║
║└─BETA                                ║║Cargo.toml   │ 612     01-02-2 03:0   ║
║                                      ║║readme.txt   │ 12K     01-02-2 03:0   ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
║                                      ║║                                      ║
╚══════════════ C:\Beta ═══════════════╝╚════════════ ..  UP--DIR ═════════════╝
C:\Users\demo\left>_                                                            
1Help 2Menu 3View 4Edit 5Copy 6RenMov 7Mkdir 8Delete 9PullDn 10Quit
