crates/filecommand-tui/tests/snapshots/snapshot_views__type_ahead_mini_status.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
assertion_line: 848
expression: row
---
╚═════════════════ re ═════════════════╝╚════════════ ..  UP--DIR ═════════════╝
