crates/filecommand-tui/tests/snapshots/snapshot_views__viewer_keybar_ascii_label.snap
---
source: crates/filecommand-tui/tests/snapshot_views.rs
expression: last
---
1Help 2Unwrap 4ASCII 7Search 10Quit
